# project-m

ML/machine learning/code + deployment project/5-Password-Strength-Analysis/: __init__.py  auth.py  recommender.py
ML/machine learning/code+deploy/5-Password-Strength-Analysis/: __init__.py  recommender.py
c++/banking system/: banking_system.cpp
web development/Full-stack/1-Realtime-Chat-App-master/: package-lock.json
web development/Full-stack/3-map pin app/: README.md
web development/Full-stack/3-map pin app/backend/: index.js  package-lock.json
web development/Full-stack/3-map pin app/frontend/: package-lock.json  package.json
web development/Full-stack/5-Ai-fi/frontend/: package.json
web development/front end-react/NewsMonkey/: package-lock.json
web development/full-stack django/1-iblog/: db.sqlite3
web development/full-stack django/1-iblog/blog/: admin.py  models.py  urls.py
web development/full-stack django/1-iblog/iblog/: settings.py  urls.py
web development/full-stack django/1-iblog/template/: home.html
web development/full-stack django/2-i-social/: db.sqlite3
web3/1-airbnb-Clone/frontend/: package.json
web3/1-airbnb-Clone/frontend/constants/: index.js
web3/2-ZeroFi/: README.md
web3/2-ZeroFi/ZeroFi-solana/: Cargo.toml  README.md
web3/2-ZeroFi/ZeroFi-solana/src/: error.rs  instruction.rs  processor.rs  state.rs  utils.rs
web3/2-ZeroFi/ZeroFi-solana/~/my-solana-wallet/: my_keypair_for_program_deployment.json
web3/2-ZeroFi/ZeroFi_backend/: README.md  package.json  server.js
web3/2-ZeroFi/ZeroFi_webapp-merge/: README.md
(+93 files in other folders)
